java-package (0.63) UNRELEASED; urgency=medium

  * Team upload.
  * Suggest openjdk-8-jre instead of openjdk-7-jre
  * Standards-Version updated to 4.2.1
  * Switch to debhelper level 11
  * Use salsa.debian.org Vcs-* URLs

 -- Emmanuel Bourg <ebourg@apache.org>  Wed, 04 Jan 2017 16:07:59 +0100

java-package (0.62) unstable; urgency=medium

  * Team upload.
  * Bump Standards-Version to 3.9.8 (no changes)
  * Add --distribution option to override hard-coded value of unstable.
    Thank you to Martin Gerhard Loschwitz for the patch. (Closes: #819537)
  * Add --jce-policy <policy.zip> option to build with JCE policy file.
    Thank you to Alex Brown for the patch. (Closes: #833301)
  * Freshen the manpage example for JDK 8.
  * Implement --priority <priority> option. (Closes: #820857)
  * Bump Standards-Version of generated source package to 3.9.8.
  * Generated JDK/JRE packages now depend on java-common (Closes: #799974)

 -- tony mancill <tmancill@debian.org>  Sat, 10 Sep 2016 17:39:56 -0700

java-package (0.61) unstable; urgency=medium

  * Team upload.
  * Bump Standards-Version to 3.9.7 (no changes)
  * Use package name plus architecture as directory in /usr/lib/jvm
  * Add support for server JRE (Closes: #776389)
  * Update Vcs-Browser and Vcs-Git to use HTTPS

 -- Benjamin Drung <benjamin.drung@profitbricks.com>  Fri, 18 Mar 2016 17:50:51 +0100

java-package (0.60) unstable; urgency=medium

  * Team upload.

  [ Emmanuel Bourg ]
  * Added jcontrol to the command line alternatives (Closes: #799370)
  * Fixed the detection of the latest Java 8 documentation archives.
  * Fixed the dh_shlibdeps error when generating a documentation package
    (Closes: #753071)
  * Changed the architecture of the documentation packages from any to all.
  * Changed the section of the documentation packages to non-free/doc
  * Disabled dh_strip_nondeterminism when generating the Java packages
    to speed up the build and fix a corruption issue (Closes: #806463)
