@@ -1,6 +1,7 @@
 java-package (0.63) UNRELEASED; urgency=medium
 
   * Team upload.
+  * Removed support for the browser plugin (Closes: #779725)
   * Suggest openjdk-8-jre instead of openjdk-7-jre
   * Standards-Version updated to 4.2.1
   * Switch to debhelper level 11
